--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "typer>=0.9.0",
     "rich>=13.7.0",
     "pydantic>=2.6.0",
+    "django>=5.1.7",
 ]
 
 [project.optional-dependencies]
